--- a/e_commerce_restaurant/pubspec.yaml
+++ b/e_commerce_restaurant/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   firebase_core: ^2.2.0
+  cloud_firestore: ^4.0.5
   get_it: ^7.2.0
 
 dev_dependencies:
