--- a/e_commerce_restaurant/pubspec.yaml
+++ b/e_commerce_restaurant/pubspec.yaml
@@ -15,12 +15,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.2.0
   cloud_firestore: ^4.0.5
+  json_annotation: ^4.7.0
+  json_serializable: ^6.5.4
+  auto_route: ^5.0.2
   get_it: ^7.2.0
+  google_fonts: ^3.0.1 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  auto_route_generator: ^5.0.3
+  build_runner: ^2.2.0
   flutter_lints: ^2.0.0
 
 # The following section is specific to Flutter packages.
