--- a/e_commerce_restaurant/pubspec.yaml
+++ b/e_commerce_restaurant/pubspec.yaml
@@ -19,7 +19,10 @@ dependencies:
   json_serializable: ^6.5.4
   auto_route: ^5.0.2
   get_it: ^7.2.0
-  google_fonts: ^3.0.1 
+  flutter_riverpod: ^2.1.1
+  google_fonts: ^3.0.1
+  lottie: ^2.0.0
+  logger: ^1.1.0 
 
 dev_dependencies:
   flutter_test:
